@@ -1,0 +1,31 @@
+package com.robertx22.age_of_exile.vanilla_mc.packets.registry;
+
+import net.minecraft.client.MinecraftClient;
+import net.minecraft.network.NetworkThreadUtils;
+import net.minecraft.network.Packet;
+import net.minecraft.network.PacketByteBuf;
+import net.minecraft.network.listener.ClientLoginPacketListener;
+
+import java.io.IOException;
+
+public class MyLoginPacket implements Packet<ClientLoginPacketListener> {
+
+    @Override
+    public void read(PacketByteBuf buf) throws IOException {
+
+    }
+
+    @Override
+    public void write(PacketByteBuf buf) throws IOException {
+
+    }
+
+    @Override
+    public void apply(ClientLoginPacketListener listener) {
+        NetworkThreadUtils.forceMainThread(this, listener, MinecraftClient.getInstance());
+
+        System.out.print("thing worked");
+
+    }
+
+}
