@@ -11,6 +11,10 @@ Added a few new unique gears:
 - Crown of Ice
 - Crown of Elements
 
+Added new stats:
+- dmg at day
+- dmg at night
+
 - added gem and rune loot crates.
 
 Reworks:
